# mask_grouping

./: .gitignore  Dockerfile  GPU_USAGE_GUIDE.md  INSTALL.md  ONNX_README.md  README.md  app.py  benchmark_results_1754463237.json  convert_model.py  convert_to_onnx.py  convert_to_tensorrt.py  create_dummy_tensorrt_models.py  create_performance_chart.py  create_simple_benchmark.py  docker-compose.yml  force_cpu_tensorrt_conversion.py  onnx_issues_analysis.md  onnx_sam_wrapper.py  performance_analysis.md  performance_benchmark.py  pyproject.toml  requirements.txt  run_low_gpu_usage.sh  run_satellite_analysis.py  run_satellite_analysis_pytorch.py  run_with_performance.sh  sam_config.py  setup.sh  simple_gpu_check.py  simple_performance_comparison.py  start_server.py  tensorrt_performance_demo.py  tensorrt_sam_wrapper.py  tensorrt_sam_wrapper_cpu.py  tensorrt_sam_wrapper_cpu_old.py  test_onnx_demo.py  test_tensorrt_integration.py
src/mask_grouping/: __init__.py  core.py  droplet_processor.py  utils.py
static/: index.html
